--- a/templates/complexity_table.html
+++ b/templates/complexity_table.html
@@ -792,7 +792,7 @@
                     </div>
                 </div>
 
-                <div id="monaco-diff-editor-{{ forloop.counter }}" style="height: 500px; border: 1px solid #ccc;"></div>
+                <div id="monaco-diff-editor-{{ forloop.counter }}" style="height: 500px; border: 1px solid #ccc; text-align: left"></div>
 
                 <script>
                     const originalCode{{ forloop.counter }} = `{{ file.original_code|escapejs }}`;
